--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div>
         <h1>This is my first project</h1>
         <p>this is the beginning of my coding journey</p>
+        
     </div>
+    <img width="400px" height="400px" src="./images/mypic.jpg" alt="">
     
 </body>
 </html>
